tests/rt/pos/core/case01.femto
let val x = 10
    val y = 0 in
      case (x + y )
          of 5 => false
           | 10 => y - x
end
