tests/rt/neg/core/pattern02.femto
let val 10 = 20 in () end 
